--- a/quran.com-frontend-next/src/components/MediaMaker/Content/MediaMakerContent.module.scss
+++ b/quran.com-frontend-next/src/components/MediaMaker/Content/MediaMakerContent.module.scss
@@ -103,6 +103,43 @@ $white: #ffffff;
   color: $white;
 }
 
+.surahInfo {
+  position: absolute;
+  top: 20px;                  // space from top
+  right: 20px;                // space from right
+  text-align: right;          // right alignment
+  color: $white;
+  display: flex;
+  flex-direction: row;
+  align-items: center;        // center align vertically
+  justify-content: flex-end;  // align to right
+  gap: 12px;                  // increased gap for better spacing
+  direction: rtl;
+}
+
+.surahNumber {
+  font-family: "NotoNastaliq" !important;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 1.2;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.juzNumber {
+  font-family: "NotoNastaliq" !important;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 1.2;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.surahArabic {
+  display: inline-block;
+  vertical-align: middle;
+}
+
 .verseText {
   line-height: 1.7;
   direction: rtl !important;
