--- a/quran.com-frontend-next/src/components/dls/Toggle/Toggle.module.scss
+++ b/quran.com-frontend-next/src/components/dls/Toggle/Toggle.module.scss
@@ -6,6 +6,7 @@
   position: relative !important;
   border: 1px solid var(--color-borders-hairline) !important;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0) !important;
+  cursor: pointer !important;
 
   &:focus {
     box-shadow: 0 0 0 2px var(--color-background-inverse) !important;
@@ -58,6 +59,7 @@
   line-height: 1;
   padding-inline-end: var(--spacing-medium);
   font-weight: var(--font-weight-bold);
+  cursor: pointer;
 }
 
 .container {
@@ -66,4 +68,5 @@
   }
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
