Remove temp routes and unused page styles

--- a/quran.com-frontend-next/src/styles/_breakpoints.scss
+++ b/quran.com-frontend-next/src/styles/_breakpoints.scss
@@ -1,3 +1,4 @@
+// Restored to satisfy global imports.
 // For usage see: https://medium.com/codeartisan/breakpoints-and-media-queries-in-scss-46e8f551e2f2
 $breakpoints-mobileS: 320px;
 $breakpoints-mobileM: 375px;
