--- a/quran.com-frontend-next/src/styles/_constants.scss
+++ b/quran.com-frontend-next/src/styles/_constants.scss
@@ -1,3 +1,4 @@
+// Restored to satisfy global imports.
 // TODO: use css variables instead of hardcoded values. See global.scss
 $side-menu-desktop-width: 24rem;
 
