--- a/quran.com-frontend-next/src/styles/_shades.scss
+++ b/quran.com-frontend-next/src/styles/_shades.scss
@@ -1,3 +1,4 @@
+// Restored to satisfy theme imports.
 /** 
   Important note: these shades are meant to be used in the theme file, and not accessed directly. If you are looking to use a shade of grey, please search for the corresponding token in the theme file.
 */
